--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,140 +1,140 @@
 {
     "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
-        "Général": "Général",
-        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Général": "General",
+        "Nom de l'entrée analogique": "Name of the analog input",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Activate",
+        "Visible": "Show",
+        "Indicateurs": "Indicators",
+        "Nom": "Name",
+        "Sous-Type": "Sub-type",
+        "Valeur": "Value",
+        "Unité": "Unit",
+        "Paramètres": "Parameters",
+        "Sauvegarder": "Save"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
-        "Général": "Général",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Général": "General",
+        "Nom de l'entrée numérique": "Name of the digital input",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enable",
+        "Visible": "Show",
+        "Indicateurs": "Indicators",
+        "Nom": "Name",
+        "Sous-Type": "Sub-type",
+        "Valeur": "Value",
+        "Unité": "Unit",
+        "Paramètres": "Settings",
+        "Sauvegarder": "Save"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
-        "Général": "Général",
-        "Nom du relai": "Nom du relai",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Général": "General",
+        "Nom du relai": "Relay name",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enable",
+        "Visible": "Show",
+        "Indicateurs": "Indicators",
+        "Nom": "Name",
+        "Sous-Type": "Subtype",
+        "Valeur": "Value",
+        "Unité": "Unit",
+        "Paramètres": "Settings",
+        "Sauvegarder": "Save"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
-        "Général": "Général",
-        "Nom du compteur": "Nom du compteur",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Général": "General",
+        "Nom du compteur": "Counter name",
+        "Nom de l'entrée numérique": "Name of the digital input",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enable",
         "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Indicateurs": "Indicators",
+        "Nom": "Name",
+        "Sous-Type": "Subtype",
+        "Valeur": "Value",
+        "Unité": "Unit",
+        "Paramètres": "Settings",
+        "Sauvegarder": "Save"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800.php": {
-        "Ajouter une IPX800": "Ajouter une IPX800",
-        "Entrée analogique": "Entrée analogique",
-        "Relai": "Relai",
-        "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
+        "Ajouter une IPX800": "Add an IPX800",
+        "Entrée analogique": "Name of the analog input",
+        "Relai": "Relay",
+        "Entrée numérique": "Digital input",
+        "Compteur": "Counter",
         "Extensions X800": "Extensions X800",
-        "Carte X800 1": "Carte X800 1",
-        "Carte X800 2": "Carte X800 2",
-        "Carte X800 3": "Carte X800 3",
+        "Carte X800 1": "Board X800 1",
+        "Carte X800 2": "Board X800 2",
+        "Carte X800 3": "Board X800 3",
         "Extensions X440": "Extensions X440",
-        "Carte X440 1": "Carte X440 1",
-        "Carte X440 2": "Carte X440 2",
-        "Carte X440 3": "Carte X440 3",
-        "Mes IPX": "Mes IPX",
-        "Général": "Général",
-        "Nom de l'ipx800": "Nom de l'ipx800",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Configurer push": "Configurer push",
-        "Accéder à la carte": "Accéder à la carte",
+        "Carte X440 1": "Board X440 1",
+        "Carte X440 2": "Board X440 2",
+        "Carte X440 3": "Board X440 3",
+        "Mes IPX": "My IPX",
+        "Général": "General",
+        "Nom de l'ipx800": "IPX800 Name",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enable",
+        "Configurer push": "Push Setting",
+        "Accéder à la carte": "Board access",
         "Visible": "Visible",
-        "IP de l'ipx800": "IP de l'ipx800",
-        "Port de l'ipx800": "Port de l'ipx800",
-        "Compte de l'ipx800": "Compte de l'ipx800",
-        "Password de l'ipx800": "Password de l'ipx800",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
-        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
+        "IP de l'ipx800": "IPX800 IP",
+        "Port de l'ipx800": "IPX800 Port",
+        "Compte de l'ipx800": "IPX800 Login",
+        "Password de l'ipx800": "IPX800 Password",
+        "Indicateurs": "Indicators",
+        "Nom": "Name",
+        "Sous-Type": "Sub-type",
+        "Valeur": "Value",
+        "Unité": "Unit",
+        "Paramètres": "Settings",
+        "Supprimer": "Delete",
+        "Sauvegarder": "Save",
+        "Sauvegarde effectuée avec succès": "Success saving",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Use this icon to see details <i class=\"fa fa-sitemap\"><\\/i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
-        "Information générale": "Information générale",
-        "IP de Jeedom": "IP de Jeedom",
-        "Chemin web": "Chemin web",
-        "Relai": "Relai",
-        "Relai X800 1": "Relai X800 1",
-        "Relai X800 2": "Relai X800 2",
-        "Relai X800 3": "Relai X800 3",
-        "Entrée numérique": "Entrée numérique",
-        "Entrée numérique X800 1": "Entrée numérique X800 1",
-        "Entrée numérique X800 2": "Entrée numérique X800 2",
-        "Entrée numérique X800 3": "Entrée numérique X800 3",
-        "Appliquer": "Appliquer",
-        "Tout décocher": "Tout décocher",
-        "Tout cocher": "Tout cocher"
+        "Information générale": "Informations",
+        "IP de Jeedom": "Jeedom IP",
+        "Chemin web": "Web path",
+        "Relai": "Relay",
+        "Relai X800 1": "Relay X800 1",
+        "Relai X800 2": "Relay X800 2",
+        "Relai X800 3": "Relay X800 3",
+        "Entrée numérique": "Digital input",
+        "Entrée numérique X800 1": "Digital input X800 1",
+        "Entrée numérique X800 2": "Digital input X800 2",
+        "Entrée numérique X800 3": "Digital input X800 3",
+        "Appliquer": "Apply",
+        "Tout décocher": "Uncheck all",
+        "Tout cocher": "Check all"
     },
     "plugins\/ipx800\/desktop\/js\/ipx800.js": {
-        "Nom": "Nom",
-        "Calcul": "Calcul",
-        "Rechercher équipement": "Rechercher équipement",
-        "Formule standard": "Formule standard",
-        "Unite": "Unite",
+        "Nom": "Name",
+        "Calcul": "Calculation",
+        "Rechercher équipement": "Search",
+        "Formule standard": "Standard formula",
+        "Unite": "Unit",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Historiser",
-        "Afficher": "Afficher",
-        "Inverser": "Inverser",
-        "Correction Min Auto": "Correction Min Auto",
-        "Correction Max Auto": "Correction Max Auto",
-        "Tester": "Tester",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
-        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
-        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
+        "Historiser": "Logging",
+        "Afficher": "Show",
+        "Inverser": "Invert",
+        "Correction Min Auto": "Correcting Min Auto",
+        "Correction Max Auto": "Correcting Max Auto",
+        "Tester": "Test",
+        "Configurer l'IPX pour avoir le retour des etats": "Set IPX to have state return",
+        "Accèder à l'interface de l'IPX": "Access user interface of the IPX",
+        "Application de la configuration Push correcte": "Apply the correct push setting"
     }
 }
