--- a/doc/en_US/index.asciidoc
+++ b/doc/en_US/index.asciidoc
@@ -1,4 +1,4 @@
-== Présentation ==
+== Introduction ==
 Ce plugin permet de gérer les cartes IPX800 de GCE.
 
 Initialement, ce plugin a été créé pour connecter les IPX800 de GCE.
