--- a/doc/en_US/index.asciidoc
+++ b/doc/en_US/index.asciidoc
@@ -1,9 +1,9 @@
 == Introduction ==
 Ce plugin permet de gérer les cartes IPX800 de GCE.
 
-Initialement, ce plugin a été créé pour connecter les IPX800 de GCE.
+Initially, this plugin was created to connect GCE Ecodevices.
 
-=== Données visibles sur le Dashboard : ===
+=== Data visible on the Dashboard: ===
 * ''les entrées analogiques''
 * ''les entrées numeriques''
 * ''les relais''
