--- a/doc/en_US/index.asciidoc
+++ b/doc/en_US/index.asciidoc
@@ -1,5 +1,5 @@
 == Introduction ==
-Ce plugin permet de gérer les cartes IPX800 de GCE.
+This plugin is used to manage GCE IPX800 cards.
 
 Initially, this plugin was created to connect GCE Ecodevices.
 
@@ -22,7 +22,7 @@ Puis définir :
 * ''Catégorie'' (optionnelle)
 * ''Activer'' (à cocher, sinon l’équipement ne sera pas utilisable)
 * ''Visible'' (optionel si vous ne désirez pas le rendre visible sur le Dashboard)
-* ''Adresse IP''
+* '''IP Adress'''
 * ''Port''
 * ''Compte''
 * ''Mot de passe''
