[ROBOT] Action all

--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -11,7 +11,7 @@ Définition template des relais boutons.
 
 1.40:: Mise a jour des entrées analogiques, même si la valeur ne change pas pour les graphiques.
 
-1.39:: Compatibilité Jeedom 2.0.
+1.39:: Jeedom 2.0 Kompatibilität
 
 1.38:: Modification de cron pour plus d'autonomie.
 +
