--- a/doc/de_DE/faq.asciidoc
+++ b/doc/de_DE/faq.asciidoc
@@ -26,7 +26,7 @@ Ce plugin est gratuit pour que chacun puisse en profiter simplement. Si vous sou
 link:https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=U43F9GVG9KMH8[Faire un don au développeur du plugin]
 --
 
-.J'aimerai remonter des erreurs/modifications directement dans le code ?
+Ich möchte frühere Fehler/Änderungen im Code direkt ansehen?
 --
-C'est tout à fait possible via https://github.com/guenneguezt/plugin-ipx800[github]
+Es ist durchaus möglich über https://github.com/guenneguezt/plugin-ipx800[github]
 --
