[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,140 +1,140 @@
 {
     "plugins\/ipx800\/desktop\/php\/ipx800_analogique.php": {
-        "Général": "Général",
-        "Nom de l'entrée analogique": "Nom de l'entrée analogique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Général": "General",
+        "Nom de l'entrée analogique": "Nombre de la entrada analogica",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Indicateurs": "Indicadores",
+        "Nom": "Nombre",
+        "Sous-Type": "Sub-Tipo",
+        "Valeur": "Valor",
+        "Unité": "Unidad",
+        "Paramètres": "Parámetros",
+        "Sauvegarder": "Salvar"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
-        "Général": "Général",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Général": "General",
+        "Nom de l'entrée numérique": "Nombre de la entrada numérica",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Indicateurs": "Indicadores",
+        "Nom": "Nombre",
+        "Sous-Type": "Sub-Tipo",
+        "Valeur": "Valor",
+        "Unité": "Unidad",
+        "Paramètres": "Parámetros",
+        "Sauvegarder": "Salvar"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_relai.php": {
-        "Général": "Général",
-        "Nom du relai": "Nom du relai",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Général": "General",
+        "Nom du relai": "Nombre del relé",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Indicateurs": "Indicadores",
+        "Nom": "Nombre",
+        "Sous-Type": "Sub-Tipo",
+        "Valeur": "Valor",
+        "Unité": "Unidad",
+        "Paramètres": "Parámetros",
+        "Sauvegarder": "Salvar"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
-        "Général": "Général",
-        "Nom du compteur": "Nom du compteur",
-        "Nom de l'entrée numérique": "Nom de l'entrée numérique",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Général": "General",
+        "Nom du compteur": "Nombre del contador",
+        "Nom de l'entrée numérique": "Nombre de la entrada numérica",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Sauvegarder": "Sauvegarder"
+        "Indicateurs": "Indicadores",
+        "Nom": "Nombre",
+        "Sous-Type": "Sub-Tipo",
+        "Valeur": "Valor",
+        "Unité": "Unidad",
+        "Paramètres": "Parámetros",
+        "Sauvegarder": "Salvar"
     },
     "plugins\/ipx800\/desktop\/php\/ipx800.php": {
-        "Ajouter une IPX800": "Ajouter une IPX800",
-        "Entrée analogique": "Entrée analogique",
-        "Relai": "Relai",
-        "Entrée numérique": "Entrée numérique",
-        "Compteur": "Compteur",
-        "Extensions X800": "Extensions X800",
-        "Carte X800 1": "Carte X800 1",
-        "Carte X800 2": "Carte X800 2",
-        "Carte X800 3": "Carte X800 3",
-        "Extensions X440": "Extensions X440",
-        "Carte X440 1": "Carte X440 1",
-        "Carte X440 2": "Carte X440 2",
-        "Carte X440 3": "Carte X440 3",
-        "Mes IPX": "Mes IPX",
-        "Général": "Général",
-        "Nom de l'ipx800": "Nom de l'ipx800",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Configurer push": "Configurer push",
-        "Accéder à la carte": "Accéder à la carte",
+        "Ajouter une IPX800": "Añadir un IPX800",
+        "Entrée analogique": "Entrada analógica",
+        "Relai": "Relé",
+        "Entrée numérique": "Entrada numérica",
+        "Compteur": "Medidor",
+        "Extensions X800": "Extensiones X800",
+        "Carte X800 1": "Tarjeta X800 1",
+        "Carte X800 2": "Tarejta X800 2",
+        "Carte X800 3": "Tarjeta X800 3",
+        "Extensions X440": "Extensiones X440",
+        "Carte X440 1": "Tarjeta X440 1",
+        "Carte X440 2": "Tarjeta X440 2",
+        "Carte X440 3": "Tarjeta X440 3",
+        "Mes IPX": "Mis IPX",
+        "Général": "General",
+        "Nom de l'ipx800": "Nombre del Ipx800",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Catégorie": "Categoría",
+        "Activer": "Activar",
+        "Configurer push": "Configurar push",
+        "Accéder à la carte": "Acceder a la tarjeta",
         "Visible": "Visible",
-        "IP de l'ipx800": "IP de l'ipx800",
-        "Port de l'ipx800": "Port de l'ipx800",
-        "Compte de l'ipx800": "Compte de l'ipx800",
-        "Password de l'ipx800": "Password de l'ipx800",
-        "Indicateurs": "Indicateurs",
-        "Nom": "Nom",
-        "Sous-Type": "Sous-Type",
-        "Valeur": "Valeur",
-        "Unité": "Unité",
-        "Paramètres": "Paramètres",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
-        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
-        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
+        "IP de l'ipx800": "IP del Ipx800",
+        "Port de l'ipx800": "Puerto del Ipx800",
+        "Compte de l'ipx800": "Cuenta del Ipx800",
+        "Password de l'ipx800": "Contraseña del Ipx800",
+        "Indicateurs": "Indicadores",
+        "Nom": "Nombre",
+        "Sous-Type": "Sub-Tipo",
+        "Valeur": "Valor",
+        "Unité": "Unidad",
+        "Paramètres": "Parámetros",
+        "Supprimer": "Borrar",
+        "Sauvegarder": "Salvar",
+        "Sauvegarde effectuée avec succès": "Salvado realizado con éxito",
+        "Utilisez sur l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilice el icono siguiente para ver los detalles del dispositivo <i class=\\\"fa fa-sitemap\\\"></i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
-        "Information générale": "Information générale",
+        "Information générale": "Información general",
         "IP de Jeedom": "IP de Jeedom",
-        "Chemin web": "Chemin web",
-        "Relai": "Relai",
-        "Relai X800 1": "Relai X800 1",
+        "Chemin web": "Dirección web",
+        "Relai": "Relé",
+        "Relai X800 1": "Relé X800 1",
         "Relai X800 2": "Relai X800 2",
         "Relai X800 3": "Relai X800 3",
-        "Entrée numérique": "Entrée numérique",
-        "Entrée numérique X800 1": "Entrée numérique X800 1",
-        "Entrée numérique X800 2": "Entrée numérique X800 2",
-        "Entrée numérique X800 3": "Entrée numérique X800 3",
-        "Appliquer": "Appliquer",
-        "Tout décocher": "Tout décocher",
-        "Tout cocher": "Tout cocher"
+        "Entrée numérique": "Entrada numérica",
+        "Entrée numérique X800 1": "Entrada numérica X800 1",
+        "Entrée numérique X800 2": "Entrada numérica X800 2",
+        "Entrée numérique X800 3": "Entreda numérica X800 3",
+        "Appliquer": "Aplicar",
+        "Tout décocher": "Deseleccionar todas",
+        "Tout cocher": "Seleccionar todas"
     },
     "plugins\/ipx800\/desktop\/js\/ipx800.js": {
-        "Nom": "Nom",
-        "Calcul": "Calcul",
-        "Rechercher équipement": "Rechercher équipement",
-        "Formule standard": "Formule standard",
-        "Unite": "Unite",
+        "Nom": "Nombre",
+        "Calcul": "Cálculo",
+        "Rechercher équipement": "Buscar dispositivo",
+        "Formule standard": "Formula standard",
+        "Unite": "Unidad",
         "Min": "Min",
         "Max": "Max",
-        "Historiser": "Historiser",
-        "Afficher": "Afficher",
-        "Inverser": "Inverser",
-        "Correction Min Auto": "Correction Min Auto",
-        "Correction Max Auto": "Correction Max Auto",
-        "Tester": "Tester",
-        "Configurer l'IPX pour avoir le retour des etats": "Configurer l'IPX pour avoir le retour des etats",
-        "Accèder à l'interface de l'IPX": "Accèder à l'interface de l'IPX",
-        "Application de la configuration Push correcte": "Application de la configuration Push correcte"
+        "Historiser": "Historizar",
+        "Afficher": "Mostrar",
+        "Inverser": "Invertir",
+        "Correction Min Auto": "Corrección Min Auto",
+        "Correction Max Auto": "Corrección Max Auto",
+        "Tester": "Prueba",
+        "Configurer l'IPX pour avoir le retour des etats": "Configurar el IPX para recibir los retornos de estado",
+        "Accèder à l'interface de l'IPX": "Acceder al interfaz del IPX",
+        "Application de la configuration Push correcte": "Aplicación de la configuración Push correcta. "
     }
 }
