[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -17,7 +17,7 @@
     },
     "plugins\/ipx800\/desktop\/php\/ipx800_bouton.php": {
         "Général": "General",
-        "Nom de l'entrée numérique": "Nombre de la entrada numérica",
+        "Nom de l'entrée numérique": "Nombre de la entrada digital",
         "Objet parent": "Objeto padre",
         "Aucun": "Ninguno",
         "Catégorie": "Categoría",
@@ -50,7 +50,7 @@
     "plugins\/ipx800\/desktop\/php\/ipx800_compteur.php": {
         "Général": "General",
         "Nom du compteur": "Nombre del contador",
-        "Nom de l'entrée numérique": "Nombre de la entrada numérica",
+        "Nom de l'entrée numérique": "Nombre de la entrada digital",
         "Objet parent": "Objeto padre",
         "Aucun": "Ninguno",
         "Catégorie": "Categoría",
@@ -68,7 +68,7 @@
         "Ajouter une IPX800": "Añadir un IPX800",
         "Entrée analogique": "Entrada analógica",
         "Relai": "Relé",
-        "Entrée numérique": "Entrada numérica",
+        "Entrée numérique": "Entrada Digital",
         "Compteur": "Medidor",
         "Extensions X800": "Extensiones X800",
         "Carte X800 1": "Tarjeta X800 1",
@@ -111,10 +111,10 @@
         "Relai X800 1": "Relé X800 1",
         "Relai X800 2": "Relai X800 2",
         "Relai X800 3": "Relai X800 3",
-        "Entrée numérique": "Entrada numérica",
-        "Entrée numérique X800 1": "Entrada numérica X800 1",
-        "Entrée numérique X800 2": "Entrada numérica X800 2",
-        "Entrée numérique X800 3": "Entreda numérica X800 3",
+        "Entrée numérique": "Entrada Digital",
+        "Entrée numérique X800 1": "Entrada digital X800 1",
+        "Entrée numérique X800 2": "Entrada digital X800 2",
+        "Entrée numérique X800 3": "Entrada digital X800 3",
         "Appliquer": "Aplicar",
         "Tout décocher": "Deseleccionar todas",
         "Tout cocher": "Seleccionar todas"
