--- a/doc/it_IT/changelog.asciidoc
+++ b/doc/it_IT/changelog.asciidoc
@@ -2,10 +2,11 @@ WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plu
 
 Liste des évolutions majeures de la version courante :
 
-- Suppression du lien Paypal pour être conforme avec Jeedom V3.1
+- Regroupement des équipements dans une seule classe.
 
 Anciennes évolutions :
 
+- Suppression du lien Paypal pour être conforme avec Jeedom V3.1
 - Ajout de configuration push pour entrée analogique
 - Ajout d'une Clef API specifique au plugin
 - Modification pour compatibilité Jeedom V3
