--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -1,6 +1,6 @@
 WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plugin-ipx800/commits/master[Historique Commit]
 
-Liste des évolutions majeures de la version courante :
+Liste der wichtigsten Änderungen in der aktuellen Version :
 
 - Regroupement des équipements dans une seule classe.
 - Correction de la création d'équipement
