--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -7,10 +7,10 @@ Liste der wichtigsten Änderungen in der aktuellen Version :
 
 Anciennes évolutions :
 
-- Suppression du lien Paypal pour être conforme avec Jeedom V3.1
+- Der Paypal-Link wurde entfernt, um mit Jeedom V3.1 konform zu sein
 - die Push-Konfiguration für analoge Eingänge hinzugefügt
 - Ajout d'une Clef API specifique au plugin
-- Modification pour compatibilité Jeedom V3
+- Änderungen um mit Jeedom V3 kompatiebel zu sein
 - Plus de suivi de version
 - Correction du nombre d'entrée pour l'extention X800-2
 - Prise en compte des sondes CT100A et ORP Probe.
