[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -106,7 +106,7 @@
         "Carte X200ph 1": "Carte X200ph 1",
         "Carte X200ph 2": "Carte X200ph 2",
         "Gestion": "Gestion",
-        "Configuration": "Configuration",
+        "Configuration": "Konfiguration",
         "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>": "Utilisez l\\'icône suivant pour voir le détail de l\\'élément <i class=\"fa fa-sitemap\"><\/i>"
     },
     "plugins\/ipx800\/desktop\/modal\/ipx800.configpush.php": {
